# aoc23

./: .gitignore  2023-01.py  pyproject.toml
2023/: 2023-01.py
2023/02/: 2023-02.R
